force-app/main/default/objects/Case_Assignment__c/Case_Assignment__c.object-meta.xml
<CustomObject>
    <label>Case Assignment</label>
    <nameField>
        <label>Case Assignment Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>