force-app/main/default/objects/Case_Assignment__c/fields/Adjusted_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Completion_Date__c</fullName>
    <description
  >Initial estimated date of completion, to be adjusted as needed.</description>
    <inlineHelpText
  >Initial estimated date of completion, to be adjusted as needed.</inlineHelpText>
    <label>Adjusted Completion Date</label>
    <type>Date</type>
</CustomField>