force-app/main/default/objects/Case_Assignment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Indicates the Case that this assignment is for.</description>
    <inlineHelpText
  >Indicates the Case that this assignment is for.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Assignments</relationshipLabel>
    <relationshipName>Case_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>