force-app/main/default/objects/Case_Assignment__c/fields/Case_Resource__c.field-meta.xml
<CustomField>
    <fullName>Case_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Staff member who has been given this Case Assignment.</description>
    <inlineHelpText
  >Staff member who has been given this Case Assignment.</inlineHelpText>
    <label>Case Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>