force-app/main/default/objects/Case_Assignment__c/fields/Hours_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Hours_Assigned__c</fullName>
    <description
  >The number of hours needed to complete this assignment.</description>
    <inlineHelpText
  >The number of hours needed to complete this assignment.</inlineHelpText>
    <label>Hours Assigned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>