force-app/main/default/objects/Case_Assignment__c/fields/Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completed__c</fullName>
    <description
  >Shows the number of hours completed towards finishing this assignment.</description>
    <inlineHelpText
  >Shows the number of hours completed towards finishing this assignment.</inlineHelpText>
    <label>Hours Completed</label>
    <summarizedField>Case_Assignment_Activity__c.Hours__c</summarizedField>
    <summaryForeignKey
  >Case_Assignment_Activity__c.Case_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>