force-app/main/default/objects/Case_Assignment__c/fields/Is_Case_Resource_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Resource_Current_User__c</fullName>
    <formula>IF( $User.Id = Case_Resource__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Resource Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>