force-app/main/default/objects/Case_Assignment__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Describes the items that need to be entered.</description>
    <inlineHelpText
  >Describes the items that need to be entered.</inlineHelpText>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>