force-app/main/default/objects/Case_Assignment__c/fields/Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Items_Completed__c</fullName>
    <description
  >Sum of the completed items from all activities under this assignment.</description>
    <inlineHelpText
  >Sum of the completed items from all activities under this assignment.</inlineHelpText>
    <label>Items Completed</label>
    <summarizedField
  >Case_Assignment_Activity__c.Completed_Items__c</summarizedField>
    <summaryForeignKey
  >Case_Assignment_Activity__c.Case_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>