force-app/main/default/objects/Case_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date when this assignment starts.</description>
    <inlineHelpText>The date when this assignment starts.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>