force-app/main/default/objects/Case_Assignment__c/listViews/Case_Assignments_Open.listView-meta.xml
<ListView>
    <fullName>Case_Assignments_Open</fullName>
    <columns>NAME</columns>
    <columns>Case_Resource__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Adjusted_Completion_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Items_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Items_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Case Assignments - Open</label>
</ListView>