force-app/main/default/objects/Case_Assignment__c/listViews/Case_Assignments_with_Resources.listView-meta.xml
<ListView>
    <fullName>Case_Assignments_with_Resources</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Case_Resource__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Case Assignments with Resources</label>
</ListView>