force-app/main/default/objects/Case_Assignment__c/listViews/My_Open_Case_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Open_Case_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Adjusted_Completion_Date__c</columns>
    <columns>Hours_Assigned__c</columns>
    <columns>Hours_Completed__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Case_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>My Open Case Assignments</label>
</ListView>